# dios3

./: .gitignore  Cargo.toml  Dioxus.toml
assets/: tailwind.css
src/: main.rs  utils.rs
src/components/: account_card.rs  account_modal.rs  bucket_modal.rs  clients_card.rs  contacts_card.rs  github_star_action.rs  leftsidebar.rs  mod.rs  sales_card.rs  settings_modal.rs  topbar.rs
src/model/: account.rs  bucket.rs  mod.rs
src/pages/: accounts.rs  buckets.rs  dashboard.rs  mod.rs
src/repositories/: account_repo.rs  mod.rs
src/services/: mod.rs  s3_data_fetcher.rs
