[package]
name = "dios3"
version = "0.1.0"
authors = ["Kris <krzysztof.grajek@googlemail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0", features = ["router"] }
tokio = { version = "1.42.0", features = ["full"]}
aws-config = { version = "1.2.1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.27.0"
humansize = "1.1.0"

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
