[package]
name = "dios3"
version = "0.1.0"
authors = ["Kris <krzysztof.grajek@googlemail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.1", features = ["router"] }
tokio = { version = "1.37.0", features = ["full"] }
tokio-stream = { version = "0.1.15" }
aws-config = { version = "1.2.1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.27.0"
humansize = "1.1.0"
pin-project = "1.1.5"
color-eyre = "0.6.2"
bytes = "1.6.0"
aws-smithy-runtime-api = "1.5.0"
http = "0.2.12"
http-body = "0.4.6"
directories = "5.0.1"
url = "2.2.2"

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

[dev-dependencies]
tempfile = "3.2.0"
